force-app/main/default/objects/MassRecordUpdater_Process__mdt/MassRecordUpdater_Process__mdt.object-meta.xml
<CustomObject>
    <description>Create an update process for each object</description>
    <label>MassRecordUpdater Process</label>
    <pluralLabel>MassRecordUpdater Processes</pluralLabel>
</CustomObject>