force-app/main/default/objects/MassRecordUpdater_Process__mdt/fields/Current_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Field_Value__c</fullName>
    <label>Current Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>