force-app/main/default/objects/MassRecordUpdater_Process__mdt/fields/MassRecordUpdater_Object__c.field-meta.xml
<CustomField>
    <fullName>MassRecordUpdater_Object__c</fullName>
    <label>MassRecordUpdater Object</label>
    <referenceTo>MassRecordUpdater_Objects__mdt</referenceTo>
    <relationshipLabel>MassRecordUpdater Processes</relationshipLabel>
    <relationshipName>MassRecordUpdater_Processes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>