force-app/main/default/objects/MassRecordUpdater_Process__mdt/fields/New_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Field_Value__c</fullName>
    <label>New Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>