force-app/main/default/objects/MassRecordUpdater_Process__mdt/fields/Require_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Require_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Criteria</label>
    <type>Checkbox</type>
</CustomField>